[package]
name = "async-runtime"
version = "0.1.0"
authors = ["Night Cruising"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
lazy_static = "1.4.0"
libc = "0.2.86"
log = "0.4.14"
crossbeam-channel = "0.5.4"